# actividad1-mlops-openrate-Data-Guardians

./: README.md  TEAM.md  dvc.yaml  params.yaml  pyproject.toml
data/raw/: .gitignore  openrate_mock.csv.dvc
src/: make_dataset.py
