[project]
name = "actividad1-mlops-openrate-data-guardians"
version = "0.1.0"
description = "Mini flujo MLOps para predicción de Open Rate"
authors = [
    {name = "Maria Beltran_ Martha Forero"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (<3)",
    "numpy (>=2.5.0,<3.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "mlflow (>=3.14.0,<4.0.0)",
    "dvc (>=3.67.1,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "joblib (>=1.5.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
